--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                   height : 400, 
                   progress : 0
                 });
-                 var  imgArr = ['images/1.jpg','images/2.jpg','images/3.jpg','images/4.jpg','images/5.jpg','images/6.jpg','images/7.jpg','images/8.jpg','images/9.jpg','images/wangzhan2.png','images/wangzhan1.png','images/10.jpg','images/20.jpg','images/30.jpg','images/40.jpg','images/50.jpg','images/60.jpg','images/70.jpg','images/80.jpg','images/90.jpg','images/youku/1.jpg','images/youku/2.jpg','images/youku/3.jpg','images/youku/4.jpg','images/youku/5.jpg','images/youku/6.jpg','images/youku/7.jpg','images/AnyData4/images/banner.jpg','images/AnyData4/images/banner_1.jpg','images/youku/8.jpg'];
+                 var  imgArr = ['images/1.jpg','images/2.jpg','images/3.jpg','images/4.jpg','images/5.jpg','images/6.jpg','images/7.jpg','images/8.jpg','images/9.jpg','images/wangzhan2.jpg','images/wangzhan1.jpg','images/10.jpg','images/20.jpg','images/30.jpg','images/40.jpg','images/50.jpg','images/60.jpg','images/70.jpg','images/80.jpg','images/90.jpg','images/youku/1.jpg','images/youku/2.jpg','images/youku/3.jpg','images/youku/4.jpg','images/youku/5.jpg','images/youku/6.jpg','images/youku/7.jpg','images/AnyData4/images/banner.jpg','images/AnyData4/images/banner_1.jpg','images/youku/8.jpg'];
                  for (var i = 0; i <  imgArr.length; i++) {
                     var img = new Image();
                        img.src = imgArr[i];
@@ -251,7 +251,7 @@
 
                 <div class="col-lg-3 col-sm-6 col-md-4">
                       <div class="teb_centen" >
-                    <img src="images/wangzhan2.png" alt="">
+                    <img src="images/wangzhan2.jpg" alt="">
                          <br>
                          <span>网站1</span>
                          <p><a href="images/xixi/index.html">PC小站1</a></p>
@@ -260,7 +260,7 @@
 
                 <div class="col-lg-3 col-sm-6 col-md-4">
                    <div class="teb_centen">
-                    <img src="images/wangzhan1.png" alt="">
+                    <img src="images/wangzhan1.jpg" alt="">
                          <br>
                          <span>网站2</span>
                           <p><a href="images/hehe/index.html">PC小站2</a></p>
