--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
                       <span class="icon-bar"></span>
                       <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="#">
+                    <a class="navbar-brand" href="javascript:;">
                       <img class="logo" src="images/logo.png">
                     </a>
                 </div>
