--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <link rel="stylesheet" type="text/css" href="css/index.css">
         <script src="js/jquery-1.12.3.min.js"></script>
         <script type="text/javascript">
-            $(document).ready(function(){
+           (function(){
                 var $loader;
                 var totalKb = 748;
                 var kb = 0;
@@ -36,7 +36,7 @@
                    }
           };
       
-    });
+    })();
         </script>
     </head>
     <body>
@@ -211,8 +211,8 @@
                   <div class="teb_centen" data="9">
                     <img src="images/20.jpg" alt="">
                          <br>
-                         <span>挂挂卡</span>
-                         <p>挂挂卡效果</p>
+                         <span>刮刮卡</span>
+                         <p>刮刮卡效果</p>
 
                           </div>
                 </div>
