--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <link rel="stylesheet" type="text/css" href="css/index.css">
         <script src="js/jquery-1.12.3.min.js"></script>
         <script type="text/javascript">
-           (function(){
+           $(function(){
                 var $loader;
                 var totalKb = 748;
                 var kb = 0;
