--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                       <span class="icon-bar"></span>
                       <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="https://sunlong921.github.io/">
+                    <a class="navbar-brand" href="https://new-sunlong.github.io/">
                       <img class="logo" src="images/logo.png">
                     </a>
                 </div>
@@ -273,7 +273,7 @@
                       <span class="icon-bar"></span>
                       <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="https://sunlong921.github.io/">
+                    <a class="navbar-brand" href="https://new-sunlong.github.io/">
                       <img class="logo" src="images/logo.png">
                     </a>
                 </div>
@@ -346,7 +346,7 @@
                       <span class="icon-bar"></span>
                       <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="https://sunlong921.github.io/">
+                    <a class="navbar-brand" href="https://new-sunlong.github.io/">
                       <img class="logo" src="images/logo.png">  
                     </a>
                 </div>
